# adv_img_ann_exam

./: MakeFile  README.md  pyproject.toml
src/: image_clustering.py  point_clustering.py
