[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adv_img_ann_exam"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120